Adicionando os dados corretos às funções

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,61 @@
     "from sklearn.metrics import classification_report\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from classic_patterns import classic_ml_data\n"
+    "from classic_patterns import classic_ml_data\n",
+    "from indicadores import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "returns_series\n",
+      "0      -0.002515\n",
+      "1      -0.081723\n",
+      "2      -0.134312\n",
+      "3      -0.175470\n",
+      "4      -0.019431\n",
+      "          ...   \n",
+      "3555    0.061436\n",
+      "3556    0.009204\n",
+      "3557    0.030082\n",
+      "3558   -0.007300\n",
+      "3559    0.009767\n",
+      "Length: 3560, dtype: float64\n",
+      "returns_series\n",
+      "0            NaN\n",
+      "1       0.056009\n",
+      "2       0.063704\n",
+      "3       0.068316\n",
+      "4       0.079537\n",
+      "          ...   \n",
+      "3555    0.046376\n",
+      "3556    0.038243\n",
+      "3557    0.032097\n",
+      "3558    0.030072\n",
+      "3559    0.024568\n",
+      "Length: 3560, dtype: float64\n",
+      "[nan, 0.05600866566138478, 0.06370374937981206, 0.0683157993062677, 0.07953702477780306, 0.11950940410898792, 0.09549885580369279, 0.07687153965758123, 0.07453256179382457, 0.07340546021232042]\n",
+      "returns_series[:10]\n",
+      "[0.051248915737722466, 0.044683419283526246, 0.07128063674707072, 0.058206728659875334, 0.05167097695847133, 0.0421810724868715, 0.03762627047562024, 0.032900063218733865, 0.02767061092564653]\n",
+      "returns_series[11:20]\n",
+      "[0.021342047337842753, 0.03557470353318286, 0.03567833504873975, 0.040650824174106634, 0.04012125964815533, 0.036998500016016046, 0.032305427464305536, 0.027619984500003626, 0.03162447700132924]\n",
+      "returns_series[21:30]\n",
+      "[[ 0.]\n",
+      " [ 0.]\n",
+      " [-1.]\n",
+      " ...\n",
+      " [ 0.]\n",
+      " [ 1.]\n",
+      " [ 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import labeling as lb"
    ]
@@ -35,21 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'labeling' has no attribute 'label_tsla_data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Convertendo para numpy arrays, caso ainda não estejam\u001b[39;00m\n\u001b[0;32m      2\u001b[0m ml_tsla_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(classic_ml_data)  \n\u001b[1;32m----> 3\u001b[0m label_tsla_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[43mlb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlabel_tsla_data\u001b[49m)\u001b[38;5;241m.\u001b[39mravel()\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Divide os dados em conjuntos de treinamento e teste\u001b[39;00m\n\u001b[0;32m      6\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(ml_tsla_data, label_tsla_data, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'labeling' has no attribute 'label_tsla_data'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convertendo para numpy arrays, caso ainda não estejam\n",
     "ml_tsla_data = np.array(classic_ml_data)  \n",
@@ -68,49 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        -1.0       0.00      0.00      0.00         9\n",
-      "         0.0       0.00      0.00      0.00       357\n",
-      "         1.0       0.49      1.00      0.65       347\n",
-      "\n",
-      "    accuracy                           0.49       713\n",
-      "   macro avg       0.16      0.33      0.22       713\n",
-      "weighted avg       0.24      0.49      0.32       713\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def mlp(X_train, y_train, X_test, y_test, hidden_layers=(100, 100, 100), \n",
-    "              activation='logistic', solver='adam', max_iter=500, random_state=42):\n",
+    "def mlp(data, hidden_layers=(100, 100, 100), activation='logistic', \n",
+    "        solver='adam', max_iter=500, random_state=42):\n",
     "    \"\"\"\n",
     "    Treina um modelo de rede neural MLP e retorna as previsões e o relatório de classificação.\n",
     "\n",
     "    Parâmetros:\n",
-    "    - X_train: Features do conjunto de treinamento.\n",
-    "    - y_train: Rótulos do conjunto de treinamento.\n",
-    "    - X_test: Features do conjunto de teste.\n",
-    "    - y_test: Rótulos do conjunto de teste.\n",
+    "    - data: DataFrame contendo os dados de entrada.\n",
     "    - hidden_layers: Tupla com o tamanho das camadas ocultas.\n",
     "    - activation: Função de ativação a ser usada.\n",
     "    - solver: Algoritmo de otimização a ser usado.\n",
@@ -122,27 +125,34 @@
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Define a rede neural com múltiplas camadas\n",
+    "    # 1. Agregar os indicadores\n",
+    "    indicators_df = agg_indicators(data)\n",
+    "\n",
+    "    # 2. Normalizar os indicadores\n",
+    "    normalized_data = normalize_indicators(indicators_df)\n",
+    "\n",
+    "    # 3. Separar as variáveis independentes (X) e dependentes (y)\n",
+    "    X = normalized_data.drop(columns=['Adj Close'])  # Variáveis independentes\n",
+    "    y = normalized_data['Adj Close']  # Variável dependente\n",
+    "\n",
+    "    # 4. Dividir os dados em conjuntos de treinamento e teste\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
+    "\n",
+    "    # 5. Define a rede neural com múltiplas camadas\n",
     "    mlp = MLPClassifier(hidden_layer_sizes=hidden_layers, activation=activation,\n",
     "                        solver=solver, max_iter=max_iter, random_state=random_state)\n",
     "\n",
-    "    # Treina a rede neural\n",
+    "    # 6. Treina a rede neural\n",
     "    mlp.fit(X_train, y_train)\n",
     "\n",
-    "    # Faz previsões de probabilidade com o modelo MLP\n",
-    "    y_pred_probs_mlp = mlp.predict_proba(X_test)\n",
-    "\n",
-    "    # Faz previsões de classe\n",
+    "    # 7. Faz previsões de classe\n",
     "    y_pred_mlp = mlp.predict(X_test)\n",
     "\n",
-    "    # Exibe o relatório de classificação para o MLP\n",
+    "    # 8. Exibe o relatório de classificação para o MLP\n",
     "    report = classification_report(y_test, y_pred_mlp)\n",
     "    print(report)\n",
     "\n",
-    "    return y_pred_mlp, report\n",
-    "\n",
-    "# Exemplo de uso\n",
-    "y_pred_mlp, report = mlp(X_train, y_train, X_test, y_test)"
+    "    return y_pred_mlp, report"
    ]
   },
   {
@@ -154,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,18 +197,15 @@
     }
    ],
    "source": [
-    "def random_forest(X_train, y_train, X_test, y_test, n_estimators=100, \n",
-    "                        max_depth=10, random_state=42):\n",
+    "def random_forest(data, target_column, n_estimators=100, max_depth=None, random_state=42):\n",
     "    \"\"\"\n",
     "    Treina um modelo de Random Forest e retorna as previsões e o relatório de classificação.\n",
     "\n",
     "    Parâmetros:\n",
-    "    - X_train: Features do conjunto de treinamento.\n",
-    "    - y_train: Rótulos do conjunto de treinamento.\n",
-    "    - X_test: Features do conjunto de teste.\n",
-    "    - y_test: Rótulos do conjunto de teste.\n",
+    "    - data: DataFrame com as features e a variável alvo.\n",
+    "    - target_column: Nome da coluna alvo no DataFrame.\n",
     "    - n_estimators: Número de árvores na floresta.\n",
-    "    - max_depth: Profundidade máxima das árvores.\n",
+    "    - max_depth: Profundidade máxima das árvores (None para ilimitado).\n",
     "    - random_state: Semente para a geração de números aleatórios.\n",
     "\n",
     "    Retorna:\n",
@@ -206,27 +213,32 @@
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Define o modelo Random Forest\n",
+    "    # 1. Aplica as funções de pré-processamento\n",
+    "    data = agg_indicators(data)  # Ajuste conforme necessário\n",
+    "    normalized_data = normalize_indicators(data)  # Ajuste conforme necessário\n",
+    "\n",
+    "    # 2. Define X e y\n",
+    "    X = normalized_data.drop(columns=[target_column])  # Variáveis independentes\n",
+    "    y = normalized_data[target_column]  # Variável dependente\n",
+    "\n",
+    "    # 3. Divide os dados em conjuntos de treinamento e teste\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
+    "\n",
+    "    # 4. Define o modelo Random Forest\n",
     "    rf = RandomForestClassifier(n_estimators=n_estimators, max_depth=max_depth, \n",
     "                                 random_state=random_state)\n",
     "\n",
-    "    # Treina o modelo Random Forest\n",
+    "    # 5. Treina o modelo Random Forest\n",
     "    rf.fit(X_train, y_train)\n",
     "\n",
-    "    # Faz previsões de probabilidade\n",
-    "    y_pred_probs = rf.predict_proba(X_test)\n",
-    "\n",
-    "    # Faz previsões de classe\n",
+    "    # 6. Faz previsões de classe\n",
     "    y_pred_rf = rf.predict(X_test)\n",
     "\n",
-    "    # Exibe o relatório de classificação para o Random Forest\n",
+    "    # 7. Exibe o relatório de classificação para o Random Forest\n",
     "    report = classification_report(y_test, y_pred_rf)\n",
     "    print(report)\n",
     "\n",
-    "    return y_pred_rf, report\n",
-    "\n",
-    "# Exemplo de uso\n",
-    "y_pred_rf, report = random_forest(X_train, y_train, X_test, y_test)"
+    "    return y_pred_rf, report"
    ]
   },
   {
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -271,15 +283,13 @@
     }
    ],
    "source": [
-    "def gradient_boosting(X_train, y_train, X_test, y_test, random_state=42):\n",
+    "def gradient_boosting(data, target_column, random_state=42):\n",
     "    \"\"\"\n",
     "    Treina um modelo de Gradient Boosting e retorna as previsões e o relatório de classificação.\n",
     "\n",
     "    Parâmetros:\n",
-    "    - X_train: Features do conjunto de treinamento.\n",
-    "    - y_train: Rótulos do conjunto de treinamento.\n",
-    "    - X_test: Features do conjunto de teste.\n",
-    "    - y_test: Rótulos do conjunto de teste.\n",
+    "    - data: DataFrame com as features e a variável alvo.\n",
+    "    - target_column: Nome da coluna alvo no DataFrame.\n",
     "    - random_state: Semente para a geração de números aleatórios.\n",
     "\n",
     "    Retorna:\n",
@@ -287,26 +297,31 @@
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Define o modelo Gradient Boosting\n",
+    "    # 1. Aplica as funções de pré-processamento\n",
+    "    data = agg_indicators(data)  # Ajuste conforme necessário\n",
+    "    normalized_data = normalize_indicators(data)  # Ajuste conforme necessário\n",
+    "\n",
+    "    # 2. Define X e y\n",
+    "    X = normalized_data.drop(columns=[target_column])  # Variáveis independentes\n",
+    "    y = normalized_data[target_column]  # Variável dependente\n",
+    "\n",
+    "    # 3. Divide os dados em conjuntos de treinamento e teste\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
+    "\n",
+    "    # 4. Define o modelo Gradient Boosting\n",
     "    gb_model = GradientBoostingClassifier(random_state=random_state)\n",
     "\n",
-    "    # Treina o modelo Gradient Boosting\n",
+    "    # 5. Treina o modelo Gradient Boosting\n",
     "    gb_model.fit(X_train, y_train)\n",
     "\n",
-    "    # Faz previsões de probabilidade\n",
-    "    y_pred_probs = gb_model.predict_proba(X_test)\n",
-    "\n",
-    "    # Faz previsões de classe\n",
+    "    # 6. Faz previsões de classe\n",
     "    y_pred_gb = gb_model.predict(X_test)\n",
     "\n",
-    "    # Exibe o relatório de classificação para o Gradient Boosting\n",
+    "    # 7. Exibe o relatório de classificação para o Gradient Boosting\n",
     "    report = classification_report(y_test, y_pred_gb)\n",
     "    print(report)\n",
     "\n",
-    "    return y_pred_gb, report\n",
-    "\n",
-    "# Exemplo de uso\n",
-    "y_pred_gb, report = gradient_boosting(X_train, y_train, X_test, y_test)"
+    "    return y_pred_gb, report"
    ]
   },
   {
@@ -398,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
