Adicionei os dados corretos às funções

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,30 +125,30 @@
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # 1. Agregar os indicadores\n",
+    "    # Agregando os indicadores\n",
     "    indicators_df = agg_indicators(data)\n",
     "\n",
-    "    # 2. Normalizar os indicadores\n",
+    "    # Normalizando os indicadores\n",
     "    normalized_data = normalize_indicators(indicators_df)\n",
     "\n",
-    "    # 3. Separar as variáveis independentes (X) e dependentes (y)\n",
-    "    X = normalized_data.drop(columns=['Adj Close'])  # Variáveis independentes\n",
-    "    y = normalized_data['Adj Close']  # Variável dependente\n",
+    "    # Separando as variáveis X e Y\n",
+    "    X = normalized_data\n",
+    "    y = label_tsla_data\n",
     "\n",
-    "    # 4. Dividir os dados em conjuntos de treinamento e teste\n",
+    "    # Dividinfo os dados em conjuntos de treinamento e teste\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
     "\n",
-    "    # 5. Define a rede neural com múltiplas camadas\n",
+    "    # Definindo a rede neural com múltiplas camadas\n",
     "    mlp = MLPClassifier(hidden_layer_sizes=hidden_layers, activation=activation,\n",
     "                        solver=solver, max_iter=max_iter, random_state=random_state)\n",
     "\n",
-    "    # 6. Treina a rede neural\n",
+    "    # Treina a rede neural\n",
     "    mlp.fit(X_train, y_train)\n",
     "\n",
-    "    # 7. Faz previsões de classe\n",
+    "    # Faz previsões de classe\n",
     "    y_pred_mlp = mlp.predict(X_test)\n",
     "\n",
-    "    # 8. Exibe o relatório de classificação para o MLP\n",
+    "    # Exibe o relatório de classificação para o MLP\n",
     "    report = classification_report(y_test, y_pred_mlp)\n",
     "    print(report)\n",
     "\n",
@@ -164,38 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        -1.0       0.00      0.00      0.00         9\n",
-      "         0.0       0.47      0.10      0.17       357\n",
-      "         1.0       0.48      0.88      0.63       347\n",
-      "\n",
-      "    accuracy                           0.48       713\n",
-      "   macro avg       0.32      0.33      0.27       713\n",
-      "weighted avg       0.47      0.48      0.39       713\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def random_forest(data, target_column, n_estimators=100, max_depth=None, random_state=42):\n",
     "    \"\"\"\n",
@@ -213,28 +184,30 @@
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # 1. Aplica as funções de pré-processamento\n",
-    "    data = agg_indicators(data)  # Ajuste conforme necessário\n",
-    "    normalized_data = normalize_indicators(data)  # Ajuste conforme necessário\n",
+    "    # Agregando os indicadores\n",
+    "    indicators_df = agg_indicators(data)\n",
     "\n",
-    "    # 2. Define X e y\n",
-    "    X = normalized_data.drop(columns=[target_column])  # Variáveis independentes\n",
-    "    y = normalized_data[target_column]  # Variável dependente\n",
+    "    # Normalizando os indicadores\n",
+    "    normalized_data = normalize_indicators(indicators_df)\n",
     "\n",
-    "    # 3. Divide os dados em conjuntos de treinamento e teste\n",
+    "    # Separando as variáveis X e Y\n",
+    "    X = normalized_data\n",
+    "    y = label_tsla_data\n",
+    "\n",
+    "    # Dividindo os dados em conjuntos de treinamento e teste\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
     "\n",
-    "    # 4. Define o modelo Random Forest\n",
+    "    # Definindo o modelo Random Forest\n",
     "    rf = RandomForestClassifier(n_estimators=n_estimators, max_depth=max_depth, \n",
     "                                 random_state=random_state)\n",
     "\n",
-    "    # 5. Treina o modelo Random Forest\n",
+    "    # Treina o modelo Random Forest\n",
     "    rf.fit(X_train, y_train)\n",
     "\n",
-    "    # 6. Faz previsões de classe\n",
+    "    # Faz previsões de classe\n",
     "    y_pred_rf = rf.predict(X_test)\n",
     "\n",
-    "    # 7. Exibe o relatório de classificação para o Random Forest\n",
+    "    # Exibe o relatório de classificação para o Random Forest\n",
     "    report = classification_report(y_test, y_pred_rf)\n",
     "    print(report)\n",
     "\n",
@@ -250,38 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        -1.0       0.00      0.00      0.00         9\n",
-      "         0.0       0.45      0.07      0.12       357\n",
-      "         1.0       0.48      0.92      0.63       347\n",
-      "\n",
-      "    accuracy                           0.48       713\n",
-      "   macro avg       0.31      0.33      0.25       713\n",
-      "weighted avg       0.46      0.48      0.37       713\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\Léo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def gradient_boosting(data, target_column, random_state=42):\n",
     "    \"\"\"\n",
@@ -297,27 +241,29 @@
     "    - report: Relatório de classificação.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # 1. Aplica as funções de pré-processamento\n",
-    "    data = agg_indicators(data)  # Ajuste conforme necessário\n",
-    "    normalized_data = normalize_indicators(data)  # Ajuste conforme necessário\n",
+    "    # Agregando os indicadores\n",
+    "    indicators_df = agg_indicators(data)\n",
     "\n",
-    "    # 2. Define X e y\n",
-    "    X = normalized_data.drop(columns=[target_column])  # Variáveis independentes\n",
-    "    y = normalized_data[target_column]  # Variável dependente\n",
+    "    # Normalizando os indicadores\n",
+    "    normalized_data = normalize_indicators(indicators_df)\n",
     "\n",
-    "    # 3. Divide os dados em conjuntos de treinamento e teste\n",
+    "    # Separando as variáveis X e Y\n",
+    "    X = normalized_data\n",
+    "    y = label_tsla_data\n",
+    "\n",
+    "    # Dividindo os dados em conjuntos de treinamento e teste\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
     "\n",
-    "    # 4. Define o modelo Gradient Boosting\n",
+    "    # Definindo o modelo Gradient Boosting\n",
     "    gb_model = GradientBoostingClassifier(random_state=random_state)\n",
     "\n",
-    "    # 5. Treina o modelo Gradient Boosting\n",
+    "    # Treina o modelo Gradient Boosting\n",
     "    gb_model.fit(X_train, y_train)\n",
     "\n",
-    "    # 6. Faz previsões de classe\n",
+    "    # Faz previsões de classe\n",
     "    y_pred_gb = gb_model.predict(X_test)\n",
     "\n",
-    "    # 7. Exibe o relatório de classificação para o Gradient Boosting\n",
+    "    # Exibe o relatório de classificação para o Gradient Boosting\n",
     "    report = classification_report(y_test, y_pred_gb)\n",
     "    print(report)\n",
     "\n",
