Ajustes na rotulagem

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,62 +13,7 @@
     "from sklearn.metrics import classification_report\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from classic_patterns import classic_ml_data\n",
-    "from indicadores import *\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "returns_series\n",
-      "0      -0.002515\n",
-      "1      -0.081723\n",
-      "2      -0.134312\n",
-      "3      -0.175470\n",
-      "4      -0.019431\n",
-      "          ...   \n",
-      "3555    0.061436\n",
-      "3556    0.009204\n",
-      "3557    0.030082\n",
-      "3558   -0.007300\n",
-      "3559    0.009767\n",
-      "Length: 3560, dtype: float64\n",
-      "returns_series\n",
-      "0            NaN\n",
-      "1       0.056009\n",
-      "2       0.063704\n",
-      "3       0.068316\n",
-      "4       0.079537\n",
-      "          ...   \n",
-      "3555    0.046376\n",
-      "3556    0.038243\n",
-      "3557    0.032097\n",
-      "3558    0.030072\n",
-      "3559    0.024568\n",
-      "Length: 3560, dtype: float64\n",
-      "[nan, 0.05600866566138478, 0.06370374937981206, 0.0683157993062677, 0.07953702477780306, 0.11950940410898792, 0.09549885580369279, 0.07687153965758123, 0.07453256179382457, 0.07340546021232042]\n",
-      "returns_series[:10]\n",
-      "[0.051248915737722466, 0.044683419283526246, 0.07128063674707072, 0.058206728659875334, 0.05167097695847133, 0.0421810724868715, 0.03762627047562024, 0.032900063218733865, 0.02767061092564653]\n",
-      "returns_series[11:20]\n",
-      "[0.021342047337842753, 0.03557470353318286, 0.03567833504873975, 0.040650824174106634, 0.04012125964815533, 0.036998500016016046, 0.032305427464305536, 0.027619984500003626, 0.03162447700132924]\n",
-      "returns_series[21:30]\n",
-      "[[ 0.]\n",
-      " [ 0.]\n",
-      " [-1.]\n",
-      " ...\n",
-      " [ 0.]\n",
-      " [ 1.]\n",
-      " [ 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
+    "from indicadores import *\n",
     "import labeling as lb"
    ]
   },
@@ -76,22 +21,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Juntando os dados\n",
-    "Pegando os dados"
+    "## Juntando os dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pedro\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\ta\\trend.py:1030: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
+      "  self._psar[i] = high2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculando os indicadores e normalizando-os\n",
+    "olhc = tsla_data\n",
+    "data = agg_indicators(olhc)\n",
+    "data = normalize_indicators(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convertendo para numpy arrays, caso ainda não estejam\n",
-    "ml_tsla_data = np.array(classic_ml_data)  \n",
-    "label_tsla_data = np.array(lb.label_tsla_data).ravel()\n",
+    "X = np.array(data)  \n",
+    "y = np.array(lb.labelData(olhc, 0.1)).ravel()\n",
     "\n",
     "# Divide os dados em conjuntos de treinamento e teste\n",
-    "X_train, X_test, y_train, y_test = train_test_split(ml_tsla_data, label_tsla_data, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -103,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,20 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2.52374159e-03 1.96985076e-01 8.00491182e-01]\n",
-      " [1.19982149e-02 4.84471646e-01 5.03530139e-01]\n",
-      " [1.41937404e-03 4.40327581e-01 5.58253045e-01]\n",
-      " ...\n",
-      " [1.41937404e-03 4.40327581e-01 5.58253045e-01]\n",
-      " [7.99688317e-04 4.84704645e-01 5.14495666e-01]\n",
-      " [4.63652258e-03 4.78172482e-01 5.17190995e-01]]\n"
+     "ename": "NameError",
+     "evalue": "name 'y_pred_probs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43my_pred_probs\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_pred_probs' is not defined"
      ]
     }
    ],
@@ -359,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
